--- a/app/views/admin/blog_articles/show.html.erb
+++ b/app/views/admin/blog_articles/show.html.erb
@@ -11,9 +11,10 @@
     <!-- Title -->
     <h1 class="mt-4"><%= @blog_article.article_name %></h1>
 
-    <%= link_to 'Edit', edit_admin_blog_article_path(@blog_article) %> |
-    <%= link_to 'Back', admin_blog_articles_path %>
-
+    <% if user_signed_in? %>
+      <%= link_to 'Edit', edit_admin_blog_article_path(@blog_article) %> |
+      <%= link_to 'Back', admin_blog_articles_path %>
+    <% end %>
     <!-- Author -->
     <p class="lead">
       by
