--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,16 @@
       <%= devise_error_messages! %>
 
       <div class="field">
+        <%= f.label 'First Name' %><br />
+        <%= f.text_field :fname, autofocus: true, autocomplete: "fname", class:'form-control' %>
+      </div>
+
+      <div class="field">
+        <%= f.label 'Last Name' %><br />
+        <%= f.text_field :lname, autofocus: true, autocomplete: "lname", class:'form-control' %>
+      </div>
+
+      <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %>
       </div>
