master : added pagination

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -26,12 +26,9 @@
 
     <!-- Pagination -->
     <ul class="pagination justify-content-center mb-4">
-      <li class="page-item">
-        <a class="page-link" href="#">&larr; Older</a>
-      </li>
-      <li class="page-item disabled">
-        <a class="page-link" href="#">Newer &rarr;</a>
-      </li>
+      <div class="digg_pagination">
+        <%= will_paginate @blog_articles, :page_links => false %>
+      </div>
     </ul>
 
   </div>
