master : added main search

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require easy-autocomplete
+ *= require easy-autocomplete.themes
  */
 
 @import "bootstrap-sprockets"
