--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -40,11 +40,12 @@
     <div class="card my-4">
       <h5 class="card-header">Search</h5>
       <div class="card-body">
+
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search for...">
-          <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
+          <%= form_with url:  search_path,  local:  true, method: :get, html: {class: "form-inline"} do |form| %>
+              <%= form.text_field :q, placeholder:  "Search for...",  data: { behaviour:  "autocomplete"},  class:  "form-control", id:"main_page_search" %>
+          <% end %>
+
         </div>
       </div>
     </div>
