--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,6 @@
     <title>Blog</title>
     <%= csrf_meta_tags %>
 
-
-
     <%#stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track'=>'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track'=>'reload' %>
 
@@ -19,44 +17,8 @@
   </head>
 
   <body>
-   <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="/">My Sample Ruby Blog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <!--<li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>-->
-
-            <% if user_signed_in? %>
-                <li>
-                  <%= link_to('Logout', destroy_user_session_path,  class:"nav-link") %>
-                </li>
-            <% else %>
-                <li>
-                  <%= link_to('Login', new_user_session_path,  class:"nav-link")  %>
-                </li>
-            <% end %>
-
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <!-- Navigation -->
+    <%= render(partial: '/layouts/partials/main_nav_menu') %>
 
     <!-- Page Content -->
     <div class="container">
@@ -73,15 +35,6 @@
 
     </br>
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <!--<script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+    <%= render(partial: '/layouts/partials/footer') %>
   </body>
 </html>
