--- a/app/views/admin/blog_articles/partials/_list.html.erb
+++ b/app/views/admin/blog_articles/partials/_list.html.erb
@@ -1,12 +1,31 @@
 <div id="filterrific_results">
 
+    <%= form_for_filterrific @filterrific do |f| %>
+        <div>
+          <div class="row">
+            <div class="col">
+              <div>
+                <%= f.text_field(:search_query, autofocus: true, placeholder: 'Article name') %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <%= link_to(
+                  'Reset filters',
+                  reset_filterrific_url,
+              ) %>
+        </div>
+        <%# add an automated spinner to your form when the list is refreshed %>
+        <%= render_filterrific_spinner %>
+    <% end %>
+
   <table class="table table-condensed">
 
     <thead>
     <tr>
       <th>Article Pic</th>
       <th>Article name</th>
-      <th>Article body</th>
       <th>Actions</th>
       <th colspan="4"></th>
     </tr>
@@ -17,8 +36,7 @@
         <tr>
           <td><%= image_tag article.article_main_image.url(:thumb) %></td>
           <td><%= article.article_name %></td>
-          <td><%= article.article_body %></td>
-          <td><%= link_to 'Show', [:admin,  article],  class:'btn btn-info' %></td>
+          <td><%= link_to 'Show', article_view_url(article.id),  class:'btn btn-info' %></td>
           <td><%= link_to 'Edit', edit_admin_blog_article_path(article),  class:'btn btn-success' %></td>
           <td><%= link_to 'Delete', admin_blog_article_url(article),  class:'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
