--- a/app/views/article/comments/_form.html.erb
+++ b/app/views/article/comments/_form.html.erb
@@ -2,7 +2,7 @@
 
   <h5 class="card-header">Leave a Comment:</h5>
   <div class="card-body">
-    <%= form_with(model: [:admin, @blog_article, @blog_article.comments.build ], local: true) do |form| %>
+    <%= form_with(model: [:admin, @article, @article.comments.build ], local: true) do |form| %>
         <div class="form-group">
           <%= form.label :commenter %><br>
           <%= form.text_field :commenter,  class:'form-control' %>
