--- a/app/views/article/view.html.erb
+++ b/app/views/article/view.html.erb
@@ -21,6 +21,17 @@
       <a href="#">Kalana</a>
     </p>
 
+    <div class="row">
+      <div class="small-2 large-4 columns">
+        <% if current_user %>
+            <%= rating_for @article, "visual_effects", enable_half: true, disable_after_rate: false, cancel_hint: 'Cancel this vote!', imdb_avg: true, target: '#hintDiv'  %>
+            <div id="hintDiv"></div>
+        <% else %>
+            <%= rating_for @article, "visual_effects" %>
+        <% end %>
+      </div>
+    </div>
+
     <hr>
 
     <!-- Date/Time -->
@@ -38,9 +49,6 @@
       <%= @article.article_body %>
     </p>
 
-    <hr>
-
-    <!-- Comments Form -->
     <%= render 'article/comments/form' %>
 
     <!--Comments -->
