--- a/app/views/page/partials/_categories.html.erb
+++ b/app/views/page/partials/_categories.html.erb
@@ -1,31 +1,14 @@
 <div class="card my-4">
-  <h5 class="card-header">Categories</h5>
+  <h5 class="card-header"><a href="/article/categories">Categories</a></h5>
   <div class="card-body">
     <div class="row">
       <div class="col-lg-6">
         <ul class="list-unstyled mb-0">
-          <li>
-            <a href="#">Web Design</a>
-          </li>
-          <li>
-            <a href="#">HTML</a>
-          </li>
-          <li>
-            <a href="#">Freebies</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-lg-6">
-        <ul class="list-unstyled mb-0">
-          <li>
-            <a href="#">JavaScript</a>
-          </li>
-          <li>
-            <a href="#">CSS</a>
-          </li>
-          <li>
-            <a href="#">Tutorials</a>
-          </li>
+          <% @article_categories.each do |category| %>
+              <li>
+                <a href="/category/<%=category.id%>/articles"><%=category.category_name%></a>
+              </li>
+          <% end %>
         </ul>
       </div>
     </div>
