--- a/app/views/layouts/partials/_admin_side_bar.html.erb
+++ b/app/views/layouts/partials/_admin_side_bar.html.erb
@@ -2,6 +2,7 @@
   <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
     <div class="list-group">
       <a href="/admin/blog_articles" class="list-group-item <% if path_parts[1] == 'admin' && path_parts[2] == 'blog_articles'%>active<% end %>">Manage Articles</a>
+      <a href="/admin/categories" class="list-group-item <% if path_parts[1] == 'admin' && path_parts[2] == 'categories'%>active<% end %>">Manage Categories</a>
       <a href="/users/edit" class="list-group-item <% if path_parts[1] == 'users' && path_parts[2] == 'edit'%>active<% end %>">Edit My Profile</a>
     </div>
   </div>
