--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,14 @@
     <br>
 
     <div class="container">
-      <% if notice %>
-          <p id="notice" class="alert alert-success"><%= notice %></p>
+      <% flash.each do |type, message| %>
+          <p class="alert  <%= bootstrap_class_for(type) %> fade in">
+            <button class="close" data-dismiss="alert">×</button>
+            <%= message %>
+          </p>
       <% end %>
+
+
       <%
         path_parts = request.env['REQUEST_URI'].split('/')
       %>
